--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
         var marks = 801;
         var grade = null;
-        if(marks > 900){
+        var atendenceok = false;
+        var obedieant = true;
+        if(marks > 900 && atendenceok || obedieant ){
             grade = 'A+';
         } else if(marks > 800){
             grade = 'A';
