--- a/JS-L1.html
+++ b/JS-L1.html
@@ -37,7 +37,7 @@
             console.log("yess,they are equal")
         }
 
-        var marks = 801;
+        var marks = prompt("enter your marks");
         var grade = null;
         var atendenceok = false;
         var obedieant = true;
@@ -59,6 +59,12 @@
         }
         console.log(grade);
 
+        var c = ['Pakistan' , 'india' , 'iran', 'russia', 'china'];
+
+        c.push('turkey');   //enter in the end
+        c.pop();            //remove from the end
+        c.unshift();        //enter in the start
+        c.shift();          //remove from start
     </script>
 </head>
 
